# AIStudio

./: .gitignore  .gitignore.bak_predeploy  .pre-commit-config.yaml  BENCHMARK_FINDINGS.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  FILE_GUIDE.md  HOWTO.md  HOW_TO.md  LICENSE  LICENSE.md  Makefile  PIPELINE.md  QUICKSTART.md  README.md  TUTORIAL.md  USER_GUIDE.md  VALIDATE.md  _ais_create_shortcut_ops.sh  _session_summary.md  about.md  ais_bench.sh  ais_bench_ops.sh  ais_clean_lib_ops.sh  ais_command_help.txt  ais_commit.sh  ais_create_shortcut  ais_deploy "STD - General - Naming Conventions - 2026-04-03.md"  ais_download_esef.sh  ais_download_sec_10k.sh  ais_download_sec_10k_ops.sh  ais_help.sh  ais_help_ops.sh  ais_import_entity_kb.sh  ais_import_entity_kb_ops.sh  ais_import_glossary_kb.sh  ais_import_glossary_kb_ops.sh  ais_import_knowledge_base.sh  ais_ingest_esef.sh  (+28 more)
.github/workflows/: ci.yml
benchmarks/: BENCHMARK_FINDINGS.md  bench.py  benchmark.py  benchmark_results.json  ingest_test.py  ingest_test_sets.yaml
benchmarks/batch/: bench_canonical.yaml
benchmarks/demo/: demo_questions.yaml
benchmarks/docs/: BENCH - Canonical Companion - AIS vs Google vs Reality.md  BENCH - Canonical Run A - SEC 10-K Calibrated Set.md  BENCH - Canonical Run A - SEC 10-K with Blackrock - gemma3-12b-24GB - 2026-07-07.md  (+11 more)
docs/: CHUNKING_GUIDE.md  CITATIONS_MEMORY_GUIDE.md  CODEBASE_GUIDE.md  DEMO_CORPUS.md  HARNESS.md  HELP - AIStudio - Benchmarks and Reports - 2026-04-15.md  PRODUCT_ROADMAP.md  QA_TESTING_LESSONS_LEARNED.md  RAG_WEB_SEARCH_AND_OPTIMIZATION.md  TESTS.md  agentic_lab_v1.md  api_introduction.md  architecture_decisions.md  architecture_elements.md  architecture_overview.md  dependencies.md  help_search_guidance.yaml  learning_log.md  rag_bot_v1.md  roadmap.md  ui_architecture.md
epaves/: CLAUDE.md  python3 -c "
front_end/: frontend_enhancements.js  rag_studio.html  server.py
prompts/: system.txt  system_small_model.txt
scripts/: BENCHMARK_FINDINGS.md  _cli_output.py  _cli_output_ops.py  _kb_common.py  _kb_common_ops.py  _mem_ballast.py  _scope_common.py  _scope_common_ops.py  ais_backup.sh  ais_build_ops_kit_ops.py  ais_commit.sh  ais_enrich_qdrant.py  ais_import_entity_kb.py  ais_import_entity_kb_ops.py  ais_import_glossary_kb.py  ais_import_glossary_kb_ops.py  ais_import_knowledge_base.py  ais_launcher.sh  ais_publish.sh  ais_start.py  benchmark.py  benchmark_results.json  download_esef_corpus.py  download_sec_corpus.py  download_sec_corpus_ops.py  restore_scripts.sh  start.sh  stop.sh  update_corpus_ops.py  update_demo_corpus_ops.py  update_help_corpus.py  update_help_corpus_ops.py  urc_backup_ops.sh  urc_deploy_ops.sh  urc_xray_repo_ops.sh
tests/: DEBUG_HINTS.md  embedding_arithmetic.py  ingest_test_ops.py  ingest_test_ops.yaml  test_aistudio.py  test_api_integration.py  test_bench_flags.py  test_chroma_fallback_on_distance_filter.py  test_chroma_query_contract.py  test_corpus_file_delete.py  test_corpus_paths.py  test_debug_stats.py  test_embeddings.py  test_health.py  test_help_conformance.py  test_howto_subset.py  test_model_fit.py  test_page_number_pipeline.py  test_rag_core_jsonl.py  test_scope_resolver.py
(+212 files in other folders)
